[package]
name = "uniformat"
version = "0.1.0"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fstrings = "0.1.4"
itertools = "0.8.0"
proc-macro2 = { version = "1.0.1", features = ["span-locations"] }
quote = "1.0.2"
syn = { version = "1.0.3", features = ["full", "extra-traits"] }

